Update prices and info for CapCut Pro

--- a/index.html
+++ b/index.html
@@ -763,10 +763,10 @@
     },
     {
       name: "CapCut Pro",
-      price: 2.60,
+      price: 2.34,
       image: "https://www.dropbox.com/scl/fi/2pw4t4u4x7fji6jum6kgw/images-1.jpeg?rlkey=h07l7rrn6v5kwgutm4vuus5xt&st=9kjyjqii&dl=1",
       info: "✓ PC - CEL - 1 Mes",
-      info1: "✓ 3 dispositivos",
+      info1: "✓ 1 dispositivo",
       renewal: 102,
       bandera: "🇧🇴🇧🇷🇺🇸+",
       stock: 1
@@ -863,13 +863,13 @@
     },
     {
     name: "CapCut Pro", 
-    price: 6.50, 
+    price: 3.80, 
     image: "https://www.dropbox.com/scl/fi/2pw4t4u4x7fji6jum6kgw/images-1.jpeg?rlkey=h07l7rrn6v5kwgutm4vuus5xt&st=9kjyjqii&dl=1",
-    info: "✓ PC - CEL - 3 Mes",
-    info1: "✓ 3 dispositivos",
+    info: "✓ PC - CEL",
+    info1: "✓ Cuenta completa",
     renewal: 112,
     bandera: "🇧🇴🇧🇷🇺🇸+",
-    stock: 0
+    stock: 1
     },
     {
     name: "Crunchyroll", 
