Rename 'CapCut Pro' to 'CapCut'

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
       stock: 1
     },
     {
-      name: "CapCut Pro",
+      name: "CapCut",
       price: 2.34,
       image: "https://www.dropbox.com/scl/fi/2pw4t4u4x7fji6jum6kgw/images-1.jpeg?rlkey=h07l7rrn6v5kwgutm4vuus5xt&st=9kjyjqii&dl=1",
       info: "✓ PC - CEL - 1 Mes",
